--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["tmt <mt12@williams.edu>"]
 
 [dependencies]
 serde = "1.0"
+serde_derive = "1.0"
 serde_json = "1.0"
 num-traits = "0.1.32"
 
