--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,14 +5,11 @@
   "tasks": [
     {
       "type": "shell",
-      "label": "build",
+      "label": "build lib",
       "command": "cargo",
       "args": ["build"],
       "problemMatcher": ["$rustc"],
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      }
+      "group": "build"
     },
     {
       "type": "shell",
@@ -24,6 +21,30 @@
         "kind": "test",
         "isDefault": true
       }
+    },
+    {
+      "type": "shell",
+      "label": "build primes",
+      "command": "cargo",
+      "args": ["build", "--example", "primes"],
+      "problemMatcher": ["$rustc"],
+      "group": "build"
+    },
+    {
+      "type": "shell",
+      "label": "build reminder",
+      "command": "cargo",
+      "args": ["build", "--example", "reminder"],
+      "problemMatcher": ["$rustc"],
+      "group": "build"
+    },
+    {
+      "type": "shell",
+      "label": "build",
+      "command": "cargo",
+      "args": ["build", "--all"],
+      "problemMatcher": ["$rustc"],
+      "group": { "kind": "build", "isDefault": true }
     }
   ]
 }
