--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ authors = ["tmt <mt12@williams.edu>"]
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-num-traits = "0.1.32"
 ordered-float = "0.5.0"
 chashmap = "2.2.0"
+indexmap = "1.0"
 
 [dev-dependencies]
 chrono = "0.4"
